// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-imWZod jkKkUW"
  >
    <div>
      <div
        class="sc-ikkyvV ecBSLA"
      >
        <div>
          <div
            class="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-eldOKa kdtPOR"
            novalidate=""
          >
            <button
              class="sc-eDPFhE lHVpj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgVNO kzlSaL"
        >
          <span />
        </div>
        <div>
          <div
            class="sc-gEvDqW sc-eqUzNf juyGmH cnAvcW"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-eldOKa kdtPOR"
            novalidate=""
          >
            <div
              class="sc-dAlxHm jtSANl"
            >
              <label
                class="sc-dhKdPU iqUOyk"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-gFqAYk hlEidj"
              >
                <input
                  autocomplete="tel"
                  class="sc-jlZhRR dylVxL"
                  data-testid="phone_number"
                  id="phone_number"
                  labels="[object Object]"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-eDPFhE lHVpj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-ikkyvV ecBSLA"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-imWZod jkKkUW"
  >
    <div>
      <div
        class="sc-ikkyvV ecBSLA"
      >
        <div
          class="sc-iGgVNO kzlSaL"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-eldOKa kdtPOR"
            novalidate=""
          >
            <div
              class="sc-dAlxHm jtSANl"
            >
              <label
                class="sc-dhKdPU iqUOyk"
                for="phone_number"
              >
                phoneNumber
              </label>
              <div
                class="sc-gFqAYk hlEidj"
              >
                <input
                  autocomplete="tel"
                  class="sc-jlZhRR dylVxL"
                  data-testid="phone_number"
                  id="phone_number"
                  labels="[object Object]"
                  name="phone_number"
                  placeholder="phoneNumber"
                  required=""
                  type="tel"
                  value=""
                />
              </div>
            </div>
            <button
              class="sc-eDPFhE lHVpj"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-ikkyvV ecBSLA"
      >
        <div>
          <form
            class="sc-eldOKa kdtPOR"
            novalidate=""
          >
            <button
              class="sc-eDPFhE lHVpj"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgVNO kzlSaL"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-eldOKa kdtPOR"
            novalidate=""
          >
            <button
              class="sc-eDPFhE lHVpj"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
